# coffee_shop/openapi_server/models/__init__.py
@@ -5,4 +5,5 @@ from __future__ import absolute_import
 # import models into model package
 from openapi_server.models.customer import Customer
 from openapi_server.models.item import Item
+from openapi_server.models.new_order import NewOrder
 from openapi_server.models.order import Order
